Added rating bars

--- a/index.html
+++ b/index.html
@@ -111,9 +111,10 @@
         <div class="popup-content">
           <div class="popup-title">${samosa.name}</div>
           <div>${samosa.description}</div>
-          <div style="margin-top: 5px;">⭐ Rating: ${samosa.rating}</div>
-          <div style="margin-top: 5px;">💲 Cost: ${samosa.cost}</div>
-          <div style="margin-top: 5px;">🕒 Hours: ${samosa.hours}</div>
+          <div style="margin-top: 7px;">⭐ Rating: ${samosa.rating}</div>
+          <div style="margin-top: 7px;">💲 Cost: ${samosa.cost}</div>
+          <div style="margin-top: 7px;">🕒 Hours: ${samosa.hours}</div>
+          <div style="margin-top: 10px;"></div>  <!-- add empty space -->
           ${createRatingBar("Crust Hardness", samosa.crustHardness)}
           ${createRatingBar("Filling Flavour", samosa.fillingFlavour)}
           ${createRatingBar("Chutney Complement", samosa.chutneyComplement)}
